started working on skills tab

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 </head>
 <body>
+
+
     <div class="navbar-container">
         <div class="navbar-items">
             <h2>ABOUT ME</h2>
@@ -19,6 +21,7 @@
             <h2>CONNECT</h2>
         </div>
     </div>
+
 
     <div class="body-container">
         <div class="aboutme-container">
@@ -34,9 +37,34 @@
             </div> 
         </div>
 
-        <div class="skills-text">
+
             <h2 class="skills">SKILLS</h2>
+
+
+        <div class="skills-logo-container">
+            <div class="skills-logo1">
+                <img src="images/icons8-html-logo-96.png" alt="" class="html">
+                <h3>HTML</h3>
+            </div>
+            <div class="skills-logo2">
+                <img src="images/icons8-css-logo-96.png" alt="" class="css">
+                <h3>CSS</h3>
+            </div>
+            <div class="skills-logo3">
+                <img src="images/icons8-javascript-96.png" alt="" class="javascript">
+                <h3>Javascript</h3>
+            </div>
+            <div class="skills-logo4">
+                <img src="images/icons8-nodejs-96.png" alt="" class="nodejs">
+                <h3>Node.js</h3>
+            </div>
+            <div class="skills-logo5">
+                <img src="images/icons8-figma-96.png" alt="" class="figma">
+                <h3>Figma</h3>
+            </div>
         </div>
+
+
     </div>
 
 
