--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 
     <div class="navbar-container">
-        <div class="navbar-items">
-            <h2>ABOUT ME</h2>
+        <div class="navbar-items"> 
+            <a href="#aboutme-container" id="idek"><h2>ABOUT ME</h2></a>
             <h2>SKILLS</h2>
             <h2>EDUCATION</h2>
             <h2>CONNECT</h2>
@@ -24,11 +24,11 @@
 
 
     <div class="body-container">
-        <div class="aboutme-container">
-            <div class="aboutme-img">
+        <div class="profile-container">
+            <div class="profile-img">
                 <img src="IMG_1254.png" alt="Graduation Picture Of Andrew", width="200" height="250">
             </div>
-            <div class="aboutme-text"> 
+            <div class="profile-text"> 
                 <p>Hi! I'm Andrew</p>
                 <h1 class="frontend">Front-End Web Developer</h1>
                 <p>I am a Passionate Junior Front-End Web Developer looking for new opportunities to grow my arsenal!</p>
@@ -37,8 +37,9 @@
             </div> 
         </div>
 
-
+        <div class="skills-text">
             <h2 class="skills">SKILLS</h2>
+        </div>
 
 
         <div class="skills-logo-container">
@@ -63,6 +64,22 @@
                 <h3>Figma</h3>
             </div>
         </div>
+
+        <div id="aboutme-container" class="aboutme-container">
+            <img src="images/computer.webp" alt="" class="aboutme-img">
+            <div class="aboutme-text">
+                <h1>Get To Know Me!</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                    . Ut accumsan consequat orci non feugiat. Ut efficitur leo
+                    in enim cursus, vitae placerat nisi consequat.
+                    Cras elementum pretium pulvinar. Donec facilisis nibh at massa
+                    eleifend semper. Fusce facilisis nec nisl ac eleifend.
+                    Maecenas arcu turpis, blandit non blandit a, aliquet quis.
+                </p>
+            </div>
+        </div>
+
 
 
     </div>
