--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <div class="navbar-container">
         <div class="navbar-items"> 
-            <a href="#aboutme-container" id="idek"><h2>ABOUT ME</h2></a>
-            <h2>SKILLS</h2>
-            <h2>EDUCATION</h2>
-            <h2>CONNECT</h2>
+            
+            <h2 class="aboutme">ABOUT ME</h2>
+            <h2 class="skill">SKILLS</h2>
+            <h2 class="education">EDUCATION</h2>
+            <h2 class="connect">CONNECT</h2>
         </div>
     </div>
 
