--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
    
 
 </head>
-<body>
-
-
+<header>
     <div class="navbar-container">
         <div class="navbar-items"> 
             
@@ -23,11 +21,13 @@
         </div>
     </div>
 
+</header>
+<body>
 
     <div class="body-container">
         <div class="profile-container">
             <div class="profile-img">
-                <img src="IMG_1254.png" alt="Graduation Picture Of Andrew", width="200" height="250">
+                <img src="IMG_1254.png" alt="Graduation Picture Of Andrew", width="200" height="200">
             </div>
             <div class="profile-text"> 
                 <p>Hi! I'm Andrew</p>
@@ -78,6 +78,48 @@
                     eleifend semper. Fusce facilisis nec nisl ac eleifend.
                     Maecenas arcu turpis, blandit non blandit a, aliquet quis.
                 </p>
+            </div>
+        </div>
+
+        <div class="slider">
+            <div class="slide">
+                <img src="images/1.jpg" alt="" >
+                <div class="info">
+                    <h2>Yeah Nothing Here</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem quidem, saepe nostrum ut, inventore, dolores similique distinctio soluta placeat aperiam maxime quibusdam accusantium fuga perspiciatis veniam excepturi in harum?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="images/2.jpg" alt="" >
+                <div class="info">
+                    <h2>Yeah Nothing Here</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem quidem, saepe nostrum ut, inventore, dolores similique distinctio soluta placeat aperiam maxime quibusdam accusantium fuga perspiciatis veniam excepturi in harum?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="images/3.jpg" alt="" >
+                <div class="info">
+                    <h2>Yeah Nothing Here</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem quidem, saepe nostrum ut, inventore, dolores similique distinctio soluta placeat aperiam maxime quibusdam accusantium fuga perspiciatis veniam excepturi in harum?</p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="images/4.jpg" alt="" >
+                <div class="info">
+                    <h2>Yeah Nothing Here</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem quidem, saepe nostrum ut, inventore, dolores similique distinctio soluta placeat aperiam maxime quibusdam accusantium fuga perspiciatis veniam excepturi in harum?</p>
+                </div>
+            </div>
+            <div class="navigation">
+                <i class='bx bx-left-arrow prev-btn'></i>
+                <i class='bx bx-right-arrow next-btn' ></i>
+            </div>
+            <div class="navigation-button">
+                <div class="btn-icon"></div>
+                <div class="btn-icon"></div>
+                <div class="btn-icon"></div>
+                <div class="btn-icon"></div>
+                <div class="btn-icon"></div>
             </div>
         </div>
 
